# mipidsi

./: CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  rustfmt.yaml
docs/: MIGRATION.md  TROUBLESHOOTING.md
examples/parallel_ili9341_rp_pico/: Cargo.toml
examples/parallel_ili9341_rp_pico/src/: main.rs
examples/spi-ili9486-esp32-c3/src/: main.rs
examples/spi-st7789-rpi-zero-w/.cargo/: config.toml
mipidsi/: CHANGELOG.md  Cargo.toml  README.md
mipidsi-async/: Cargo.toml  README.md
mipidsi-async/src/: batch.rs  builder.rs  dcs.rs  lib.rs  models.rs
mipidsi-async/src/models/: gc9a01.rs  ili9341.rs  ili9342c.rs  ili934x.rs  ili9468.rs  ili9486.rs  st7735s.rs  st7789.rs
mipidsi-async/src/models/st7789/: variants.rs
mipidsi/docs/: MIGRATION.md  TROUBLESHOOTING.md
mipidsi/examples/parallel_ili9341_rp_pico/: Cargo.toml
mipidsi/examples/parallel_ili9341_rp_pico/.cargo/: config.toml
mipidsi/examples/parallel_ili9341_rp_pico/src/: main.rs
mipidsi/examples/spi-ili9486-esp32-c3/: Cargo.toml
mipidsi/examples/spi-ili9486-esp32-c3/src/: main.rs
mipidsi/examples/spi-st7789-rpi-zero-w/: Cargo.toml  README.md
mipidsi/examples/spi-st7789-rpi-zero-w/.cargo/: config.toml
mipidsi/examples/spi-st7789-rpi-zero-w/src/: main.rs
mipidsi/src/: batch.rs  builder.rs  controllers.rs  dcs.rs  error.rs  graphics.rs  lib.rs  models.rs  options.rs  orientation.rs  test_image.rs
mipidsi/src/controllers/: gc9a01.rs  ili9341.rs  ili934x.rs
mipidsi/src/controllers/st7789/: variants.rs
mipidsi/src/dcs/: set_address_mode.rs  set_column_address.rs  set_invert_mode.rs  set_page_address.rs  set_pixel_format.rs  set_scroll_area.rs  set_scroll_start.rs  set_tearing_effect.rs
mipidsi/src/graphics/: batch.rs  buffered.rs  direct.rs
mipidsi/src/interface/: async_interface.rs  buffered.rs  mod.rs  parallel.rs  spi.rs
mipidsi/src/interface/async_interface/: spi.rs
mipidsi/src/models/: gc9107.rs  gc9a01.rs  ili9341.rs  ili9342c.rs  ili934x.rs  ili9486.rs  rm67162.rs  st7735s.rs  st7789.rs  st7796.rs
mipidsi/src/models/st7789/: variants.rs
mipidsi/src/options/: orientation.rs
mipidsi/tests/: external.rs
src/: _troubleshooting.rs  batch.rs  builder.rs  dcs.rs  display_async.rs  error.rs  framebuffer.rs  graphics.rs  init_engine.rs  instruction.rs  interface.rs  lib.rs  models.rs  no_pin.rs  options.rs  test_image.rs
src/asynch/: mod.rs  models.rs
src/dcs/: caset.rs  colmod.rs  macros.rs  madctl.rs  raset.rs  set_address_mode.rs  set_column_address.rs  set_invert_mode.rs  set_page_address.rs  set_pixel_format.rs  set_scroll_area.rs  set_scroll_start.rs  set_tearing_effect.rs  simple_command.rs  vscad.rs  vscrdef.rs
src/interface/: parallel.rs  spi.rs  spi_async.rs
src/models/: gc9107.rs  gc9a01.rs  ili9225.rs  ili9341.rs  ili9342c.rs  ili934x.rs  ili9486.rs  ili9488.rs  ili948x.rs  rm67162.rs  st7735s.rs  st7789.rs  st7789vw.rs  st7796.rs
src/models/st7789/: variants.rs
tests/: external.rs
