[package]
name = "mipidsi-async"
description = "MIPI Display Command Set compatible generic driver async version"
version = "0.1.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/almindor/mipidsi"
keywords = ["embedded-hal-driver", "mipi", "dcs", "display"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"
rust-version = "1.61"

[dependencies]
display-interface = { git = "https://github.com/therealprof/display-interface.git" }
embedded-graphics-core = ">= 0.4.0"
embedded-hal = "1.0.0-rc.1"

[dependencies.heapless]
optional = true
version = ">= 0.7.16"

[features]
default = ["batch"]
batch = ["heapless"]
