[package]
name = "mipidsi-async"
description = "MIPI Display Command Set compatible generic driver async version"
version = "0.1.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/almindor/mipidsi"
keywords = ["embedded-hal-driver", "mipi", "dcs", "display"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"
rust-version = "1.84"

[dependencies]
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
heapless = "0.8.0"
