[package]
name = "mipidsi"
description = "MIPI Display Command Set compatible generic driver"
version = "0.8.0"
authors = ["Ales Katona <almindor@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/almindor/mipidsi"
keywords = ["embedded-hal-driver", "mipi", "dcs", "display"]
readme = "README.md"
documentation = "https://docs.rs/mipidsi"
rust-version = "1.75"

[dependencies]
display-interface = "0.5.0"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
nb = "1.0.0"

[dependencies.heapless]
optional = true
version = "0.8.0"

[dev-dependencies]
embedded-graphics = "0.8.0"
display-interface-spi = "0.5.0"
display-interface-parallel-gpio = "0.7.0"

[features]
default = ["batch", "buffered"]
batch = ["heapless"]
buffered = []
