[package]
edition = "2021"
name = "parallel_ili9341_rp_pico"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"

defmt = "0.3.6"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

rp-pico = "0.9.0"

embedded-graphics = "0.8.0"
embedded-graphics-core = "0.4.0"
mipidsi = { path = "../../" }

[workspace]
