[package]
name = "spi_ili9486_esp32c3"
version = "0.1.0"
edition = "2021"

[dependencies]
mipidsi = { path = "../../" }
hal = { package = "esp-hal", version = "0.21", features = ["esp32c3"] }
esp-backtrace = { version = "0.14", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32c3"] }
embedded-graphics = "0.8.0"
display-interface-spi = "0.5.0"
fugit = "0.3.7"
embedded-hal-bus = "0.2.0"

[profile.dev.package.esp-hal]
debug = false

[workspace]
